<resources>
    <string name="app_name">Lockers</string>
    <string name="servicedesc">Lockers P2P Service</string>
    <string name="aiddescription">AID</string>
    <string name="reserveLocker">Reserve Locker</string>
    <string name="openLocker">Open Locker</string>
    <string name="closeLocker">Close Locker</string>
    <string name="lockerList">Lockers</string>
    <string name="releaseLocker">Release Locker</string>
    <string name="title_activity_lockers">Lockers</string>
    <string name="title_activity_locker">Locker Details</string>
    <string name="title_activity_nfc_action">Nfc Action</string>
    <string name="nfcActivityText">Hold your device close to the contactless terminal for a few seconds</string>
    <string name="nfc_logo">NFC Logo</string>
    <string name="locker">Locker</string>
    <string name="lockerNumber">Locker number</string>
    <string name="locker_icon">Locker icon</string>
    <string name="locker_list_item">Locker %1$s</string>
</resources>
